# simnel

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  socket.c
src/: CMakeLists.txt  main.c  parseArg.c  socket.c
src/include/: CMakeLists.txt  parser.h  socket.h
